fix: remove husky in CI

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,6 +33,8 @@ jobs:
           registry-url: 'https://npm.pkg.github.com'
           scope: '@brittonhayes'
       - name: Publish to GitHub Packages
-        run: npm publish
+        run: |
+          npm set-script prepare ""
+          npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
