--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "tsc",
     "generate": "openapi-typescript ./openapi.yaml --output ./src/homeassistant/schema.ts && prettier --write ./src/homeassistant/schema.ts",
     "format": "prettier --write src/**/*.ts",
-    "prepare": "husky install"
+    "prepare": "is-ci || husky install"
   },
   "keywords": [
     "homeassistant",
@@ -35,6 +35,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.0",
+    "is-ci": "^3.0.1",
     "jest": "^29.3.1",
     "openapi-typescript": "^6.1.0",
     "openapi-typescript-fetch": "^1.1.3",
