fix: change husky prepare command to use npx

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,11 +32,9 @@ jobs:
           node-version: '14.x'
           registry-url: 'https://npm.pkg.github.com'
           scope: '@brittonhayes'
-      
+
       - name: Publish to GitHub Packages
-        run: |
-          npm ci --omit=dev --ignore-scripts
-          npm publish
+        run: npm publish
         env:
           HUSKY: 0
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
