--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ env:
   NODE_VERSION: 16.x
 
 jobs:
-  typecheck:
+  ci:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-node@v3
@@ -18,6 +18,12 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
       - uses: actions/checkout@v3
       - run: |
-          npm install
+          npm ci
           npm run typecheck
           npm run lint
+
+      - name: Update documentation
+        uses: JamesIves/github-pages-deploy-action@4.1.4
+        with:
+          branch: gh-pages
+          folder: docs
