fix: typo in github action version

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,8 @@ jobs:
           npm run lint
 
       - name: Update documentation
-        uses: JamesIves/github-pages-deploy-action@4.4.1
+        uses: JamesIves/github-pages-deploy-action@v4.4.1
+        if: github.event_name != 'pull_request'
         with:
           branch: gh-pages
           folder: docs
