--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "node-fetch": "2"
   },
   "devDependencies": {
+    "@types/jest": "^29.2.4",
     "@types/node": "^18.0.3",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
@@ -40,9 +41,11 @@
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.0",
     "jest": "^29.3.1",
+    "msw": "^0.49.2",
     "openapi-typescript": "^6.1.0",
     "openapi-typescript-fetch": "^1.1.3",
     "prettier": "^2.7.1",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.8.2",
     "typedoc": "^0.23.21",
     "typescript": "^4.7.4"
